Fix topic show layout on IE7.
Stuff was floating, so I added some clearing and correctly named the block

--- a/app/assets/stylesheets/frontend/views/_topic.scss
+++ b/app/assets/stylesheets/frontend/views/_topic.scss
@@ -7,6 +7,7 @@
     .block-3 {
       width: 66%;
       float: left;
+      clear: right;
     }
     .block-4 {
       padding-top: $gutter;
